--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.21.0",
     "react-icons": "^4.3.1",
+    "react-is": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
